<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:layout_width="70dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/zeroonescore" />

    <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/couldnotgetscore"
        android:textColor="#304258"
        android:textSize="@dimen/headingfont" />

    <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/belowreasoncibilnotavaible"
        android:textColor="#8181A1"
        android:textSize="@dimen/subheadingfont" />


    <RelativeLayout
        android:id="@+id/reli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/creditfactorbackground"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/getproduct"
            android:contentDescription="TODO" />

        <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/providedinfonotmatched"
            android:textColor="#2E384D"
            android:textSize="@dimen/detailheaading"
            android:textStyle="bold" />

        <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/personaldetailsnotmatched"
            android:textColor="#8181A1"
            android:textSize="@dimen/detailheaading" />

        <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
            android:id="@+id/btnedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/updateinfo"
            android:textAllCaps="false"
            android:textColor="#1352C5" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/relibootom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
                android:id="@+id/already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trywithdifferentcredntial"
                android:textSize="@dimen/detailheaading" />

            <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/already"
                android:text="@string/skip"
                android:textColor="@color/md_blue_700"
                android:textSize="@dimen/detailheaading" />
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>