<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/footerreli"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@android:color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/page1"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/interestrate_grey" />

                <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dahboard"
                    android:textColor="@color/grey"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/page2"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/emi_cal_green" />

                <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/emicalci"
                    android:textColor="@color/primary"
                    android:textSize="10dp" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/line5"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/page5"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:contentDescription="TODO"
                        android:src="@drawable/profile_grey" />

                </RelativeLayout>
                <com.wishfin.wishfinbusinessloan.FontClasses.InterFont
                    android:id="@+id/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/grey"
                    android:textSize="10dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>